# alpaca-arcade

./: .gitignore  README.md  hcaptcha.sh  pyproject.toml  test.txt
.github/: CODEOWNERS
alpaca_arcade/: __init__.py  browse.py  db.py  errors.py  home.py  overview.py  play.py  schema.sql  scores.py
alpaca_arcade/static/: base.css  browse.css  game.css  gameover.css  gameover.js  home.css  leaderboard.js  minesweeper.js  overview.css
alpaca_arcade/static/favicon/: site.webmanifest
alpaca_arcade/templates/: base.html
alpaca_arcade/templates/browse/: index.html
alpaca_arcade/templates/errors/: 404.html
alpaca_arcade/templates/home/: index.html
alpaca_arcade/templates/overview/: breakout.html  index.html  minesweeper.html
alpaca_arcade/templates/play/: breakout.html  index.html  minesweeper.html
hackathon/: __init__.py  db.py  home.py  play.py  schema.sql  scores.py
hackathon/static/: base.css  components.js  game.css  gameover.css  gameover.js  high_scores.js  home.css  jkg.css  leaderboard.js  minesweeper.js  script.js  styles.css
hackathon/templates/: base.html
hackathon/templates/home/: index.html
hackathon/templates/play/: index.html
metadata/: Minesweeper.md
tests/: conftest.py  data.sql  test_db.py  test_factory.py  test_home.py  test_play.py  test_scores.py
