[project]
name = "alpaca-arcade"
version = "0.1.0"
description = "Classic games online"
dependencies = [
    "flask",
    "pytest",
    "gunicorn",
    "requests",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["alpaca_arcade"]
